# kulta

./: .gitignore  Cargo.toml  README.md  SKAFFOLD.md  sykli.rs
.github/workflows/: ci.yml
deploy/: controller.yaml  rbac.yaml
docs/design/: pause-duration-implementation.md
examples/: manual-promotion-test.yaml  time-based-pause-test.yaml
src/: lib.rs  main.rs  main_test.rs
src/controller/: cdevents.rs  cdevents_test.rs  mod.rs  prometheus.rs  rollout.rs  rollout_test.rs  rollout_test.rs.bak
src/controller/strategies/: blue_green.rs  canary.rs  mod.rs  simple.rs
src/crd/: rollout.rs  rollout_test.rs
src/server/: health.rs  health_test.rs  leader.rs  leader_test.rs  metrics.rs  metrics_test.rs  mod.rs
tests/: integration_test.rs  seppo_integration_test.rs  stress_test.rs
tests/integration/: config.toml  mod.rs
tests/integration/framework/: assertions.rs  cluster.rs  k8s.rs  metrics.rs  mod.rs
tests/integration/scenarios/: canary_rollout.rs  mod.rs
