[package]
name = "kulta"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kubernetes client and controller runtime
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Gateway API types
# NOTE: Using 0.10 to avoid k8s-openapi version conflicts
gateway-api = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
serde_yaml = "0.9"
